--- a/dashboard/.gitignore
+++ b/dashboard/.gitignore
@@ -1,23 +1,49 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Build output
+dist/
+build/
+out/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Env files
+.env
+.env.local
+.env.*.local
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Dependency directories
+bower_components/
+
+# Compiled source
+*.tsbuildinfo
+
+# Mac system files
+*.DS_Store
+
+# Optional: if you're using Linux or Windows temp files
+*.swp
+*.tmp
+*.bak
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Optional: if you're using IntelliJ or WebStorm
+*.iml
