--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "node index.js",
+    "prod": "pm2 index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "pushpendra",
   "license": "ISC",
   "description": "",
   "devDependencies": {
